--- a/web/themes/citizen_patterns/components/_patterns/00-base/colors/_color-vars.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/colors/_color-vars.scss
@@ -12,6 +12,16 @@ $brightRed    : #dd241b;
 $red          : #bf0e0e;
 $pink         : #f8e8f1;
 
+/* ADMINS - do not customize per site */
+$fuchsia       : #c028bb;
+$darkFuchsia   : #5d025a;
+$purple        : #8b01e2;
+$green         : #018901;
+$gold          : #fcd105;
+$tan           : #8e700b;
+$transFuchsia  : rgba(192,40,187,0.03);
+$transGold     : rgba(252,217,1,0.06);
+$transGreen    : rgba(1,185,1,0.05);
 
 /* transparents */
 $transWhite  : rgba(255,255,255,0.7);
