--- a/web/themes/citizen_patterns/components/_patterns/05-miscellaneous/_site-styles.scss
+++ b/web/themes/citizen_patterns/components/_patterns/05-miscellaneous/_site-styles.scss
@@ -370,36 +370,32 @@ body {
 /* MESSAGING
 ----------------- */
 .drupal-message {
-	margin: 2rem auto;
-	padding: 10px 10px 10px 50px; /* LTR */
-	background-color: $white;
-	background-image: url("../images/message-24-ok.png");
-	background-position: 8px 8px; /* LTR */
+	padding: 15px 20px 12px 45px;
+	margin-top: $spaceMd;
 	background-repeat: no-repeat;
-	border: 1px solid #be7;
+	background-position: 12px center;
+	background-size: 20px 20px;
+	border-top: 1px solid;
+	border-bottom: 1px solid;
+	margin-bottom: $spaceMd;
 	max-width: $contentStop;
+	@include auto;
+	&.error-message{
+		background-color: $messageErrorBack;
+		border-color: $messageErrorText;
+		color: $messageErrorText;
+		background-image: url($messageErrorIcon);
+	}
+	&.warning-message{
+		background-color: $messageWarningBack;
+		border-color: $messageWarningText;
+		color: $messageWarningText;
+		background-image: url($messageWarningIcon);
+	}
+	&.status-message{
+		background-color: $messageGoodBack;
+		border-color: $messageGoodText;
+		color: $messageGoodText;
+		background-image: url($messageGoodIcon);
+	}
 }
-
-.messages--status,.status-message {
-	@extend .drupal-message;
-	color: #234600;
-}
-.messages--warning,.warning-message {
-	@extend .drupal-message;
-	color: #840;
-	background-image: url("../images/message-24-warning.png");
-	border-color: #ed5;
-}
-.messages--error,.error-message {
-	@extend .drupal-message;
-	color: #8c2e0b;
-	background-image: url("../images/message-24-error.png");
-	border-color: #ed541d;
-}
-.messages__list {
-	margin: 0;
-}
-.messages__item {
-	list-style-image: none;
-}
-
