--- a/web/themes/crane/scss/components/_navigation.scss
+++ b/web/themes/crane/scss/components/_navigation.scss
@@ -60,12 +60,12 @@
 	display: none !important;
 }
 .toolbar-tray-horizontal{
-	.menu-item-expanded{
-		background-color: $white !important;
+	.menu-item--expanded{
+		background: none;
 	}
 	.menu-item{
 		&:hover,&:focus{
-			background-color: $offWhite !important;
+			background: $iceBlue;
 		}
 	}
 }
