--- a/web/themes/crane/scss/components/_header.scss
+++ b/web/themes/crane/scss/components/_header.scss
@@ -2,10 +2,64 @@
   HEADER
 ========================== */
 
-header.content-header{
-	background: #323b49;
-	color: #fff;
-	min-height: 60px;
+.header-bar{
+	box-sizing: border-box;
+	background: $black;
+	color: $white;
+	padding: 18px $siteMarginMobile 13px;
+	position: fixed;
+	width: 100%;
+	top: 50px;
+	left: 0;
+	z-index: 496;
+	@include safeFlex(row,wrap,center,center);
+	@include tab{
+		top: 0;
+		left: 0;
+		z-index: 599;
+		@include safeFlex(row,wrap,justify,center);
+	}
+	.site-name{
+		font-weight: $heavy;
+		display: block;
+		@include onlySmall{
+			width: 100%;
+			text-align: center;
+			margin-bottom: $spaceXs;
+		}
+	}
+	.header-actions{
+		@include safeFlex(row,wrap,center,start);
+		@include bleed(padding,20px);
+		@include tab{
+			text-align: right;
+			@include calc(width,"100% - 200px");
+			@include safeFlex(row,wrap,end,start);
+		}
+		& > div{
+			&:not(:last-child){
+				position: relative;
+				&:after{
+					@include vertRule(right,70%,$white);
+				}
+			}
+		}
+		.user-icon{
+			width: 14px;
+			margin-right: .75rem;
+		}
+		a{
+			color: $white;
+			text-decoration: none;
+			&:hover,&:focus{
+				opacity: .6;
+				text-decoration: underline;
+			}
+		}
+	}//end header actions
+}//end header-bar
+
+header{
 	.shortcut-action__icon{
 		background: transparent url('../images/icons/admin-icons/shortcut-star.svg') no-repeat left top;
 	}
@@ -20,12 +74,39 @@ header.content-header{
 	.shortcut-action--remove{
 		.shortcut-action__icon{
 			background: transparent url('../images/icons/admin-icons/shortcut-star-remove.svg') no-repeat left top;
-		}
-		&:hover,&:focus{
-			.shortcut-action__icon{
-				background: transparent url(../icons/admin-icons/shortcut-star-remove.svg) no-repeat left top;
-				opacity: .6;
+			&:hover,&:focus{
+				.shortcut-action__icon{
+					background: transparent url(../icons/admin-icons/shortcut-star-remove.svg) no-repeat left top;
+				}
 			}
 		}
 	}
-}//end content header
+	&.content-header{
+		position: relative;
+		padding: $spaceLg 0 0;
+		background-color: $siteBack;
+		@include tab{
+			padding: $spaceXl 0 0;
+		}
+		.region-header{
+			border-bottom: 1px solid $borderRule;
+			@include desk{
+				@include safeFlex(row,wrap,justify,start);
+			}
+		}
+		.block-page-title-block{
+			.page-title{
+				color: $black;
+				margin-bottom: $spaceSm;
+			}
+		}
+	}//end content ehader
+	&.system-admin_content,&.node-add{
+		.region-header{
+			border-bottom: 0;
+		}
+		#block-crane-content{
+			padding-top: 0;
+		}
+	}
+}//end content-header
