--- a/web/themes/crane/scss/components/_blocks.scss
+++ b/web/themes/crane/scss/components/_blocks.scss
@@ -1,8 +1,17 @@
 /* ==============
 	 BLOCKS
 ================== */
+#block-crane-help{
+	padding: $elementSpace 0 0;
+}
+
+#block-crane-content{
+	padding: $elementSpace 0;
+}
 
 /* Hide restricted block type titles */
-.path-block:not(.role-administrator) #block-content-restricted-edit-form .field--name-info{
-	display: none;
+.entity-block_content-canonical:not(.role-administrator){
+	#block-crane-primary-local-tasks{
+		display: none;
+	}
 }
